# rss-archive

./: feed-archive.json  main.py  pyproject.toml
.github/workflows/: rss.yml
config/: data.toml  source.toml
src/rss_archive/: __init__.py  atom.py  config.py  feed.py  rss.py
