[project]
name = "rss-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WSQS", email = "sophomore@duck.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
rss-archive = "rss_archive:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
